5.0.0 -> 5.1a1:
    - jbj: pemit %{___NVRA} to parameterize the displayed NVRA while installing.
    - jbj: create %___NVRA to split external <-> internal package names.
    - rpm.org: Mass convert (back) to rpmTag as it's usable everywhere now
    - rpm.org: Use rpmSigTag enum for signature tags everywhere, more or less..
    - jbj: import a modified copy of testHTML.c from libxml2.
    - rpm.org: make gendiff sort the file list, so comparing the results is easier.
    - jbj: rpmio: test programs link only -lrpmio -lrpmmisc.
    - jbj: map tdir/tglob/tfts errors into exit codes.
    - jbj: dav{Stat,LStat,Opendir) return ENOENT with malformed URI (including
	no pesky trailing /).
    - jbj: rpmdav: fix: supply davOpendir->davHEAD a statbuf to avoid tdir/tfts
	segfaults on plain http. (only . and .. in directory).
    - jbj: tweak up tglob debugging spew, add a Glob(3) stopwatch.
    - jbj: tweak up tget debugging spew, trick in a Stat(2) on path,
	add Stat(2)/Fread(3) stopwatches, display same as "ls -island" output.
    - proyvind: python: add back RPMSENSE_FIND_REQUIRES, needed by rpmlint
    - jbj: use hashFunctionString on URI path for st->st_ino/dp->d_ino values.
    - jbj: rpmhash: expose hash{Equality,Function}String routines.
    - jbj: tweak up tdir debugging spew, add a Opendir(3) stopwatch,
	append pesky /.
    - jbj: tweak up tfts debugging spew, add a Fts(3) stopwatch, append pesky /.
    - jbj: rpmsw: add rpmswPrint to display stopwtch results.
    - jbj: rpmdav: fix: check the pesky trailing '/' on collections correctly.
    - jbj: rpmdav: add _dav_noption OPTIONS disabler, cache 1st result from URI.
    - proyvind: trim multiple slashes from buildroot for check-files script (from Nanar/Olivier Thauvin)
    - proyvind: make rpmdb cpp compliant (from spturtle/Christiaan Welvaart)
    - jbj: "+bing": glob'd directory roots need trailing '/' for DAV URI's.
    - jbj: "+bing": fix: check for glob'd directory roots before traversing.